force-app/main/default/objects/Order__c/fields/ACTIVATEDDATE__c.field-meta.xml
<CustomField>
    <fullName>ACTIVATEDDATE__c</fullName>
    <label>Activated Date</label>
    <type>DateTime</type>
</CustomField>