force-app/main/default/objects/Order__c/fields/APPLIED_OFFER__c.field-meta.xml
<CustomField>
    <fullName>APPLIED_OFFER__c</fullName>
    <label>Applied Scheme Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>