force-app/main/default/objects/Order__c/fields/Billable_Days__c.field-meta.xml
<CustomField>
    <fullName>Billable_Days__c</fullName>
    <formula>ADDMONTHS( EFFECTIVEDATE__c ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Days</label>
    <type>Date</type>
</CustomField>