force-app/main/default/objects/Order__c/fields/BILLINGADDRESS__c.field-meta.xml
<CustomField>
    <fullName>BILLINGADDRESS__c</fullName>
    <label>Billing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>