force-app/main/default/objects/Order__c/fields/BILLINGCITY__c.field-meta.xml
<CustomField>
    <fullName>BILLINGCITY__c</fullName>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>