force-app/main/default/objects/Order__c/fields/BILLINGCOUNTRY__c.field-meta.xml
<CustomField>
    <fullName>BILLINGCOUNTRY__c</fullName>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>