force-app/main/default/objects/Order__c/fields/BILLINGPOSTALCODE__c.field-meta.xml
<CustomField>
    <fullName>BILLINGPOSTALCODE__c</fullName>
    <label>Billing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>