force-app/main/default/objects/Order__c/fields/BILLINGSTATE__c.field-meta.xml
<CustomField>
    <fullName>BILLINGSTATE__c</fullName>
    <label>Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>