force-app/main/default/objects/Order__c/fields/BILLINGSTREET__c.field-meta.xml
<CustomField>
    <fullName>BILLINGSTREET__c</fullName>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>