force-app/main/default/objects/Order__c/fields/CHANNEL__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL__c</fullName>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>