force-app/main/default/objects/Order__c/fields/DELIVERED__c.field-meta.xml
<CustomField>
    <fullName>DELIVERED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivered</label>
    <type>Checkbox</type>
</CustomField>