force-app/main/default/objects/Order__c/fields/DELIVERY_DATE__c.field-meta.xml
<CustomField>
    <fullName>DELIVERY_DATE__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>