force-app/main/default/objects/Order__c/fields/DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>