force-app/main/default/objects/Order__c/fields/DISCOUNT_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>DISCOUNT_AMOUNT__c</fullName>
    <label>Discount Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>