force-app/main/default/objects/Order__c/fields/EFFECTIVEDATE__c.field-meta.xml
<CustomField>
    <fullName>EFFECTIVEDATE__c</fullName>
    <label>Order Created Date</label>
    <type>Date</type>
</CustomField>