force-app/main/default/objects/Order__c/fields/ENDDATE__c.field-meta.xml
<CustomField>
    <fullName>ENDDATE__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>