force-app/main/default/objects/Order__c/fields/ESTIMATED_DELIVERY_DATE__c.field-meta.xml
<CustomField>
    <fullName>ESTIMATED_DELIVERY_DATE__c</fullName>
    <label>Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>