force-app/main/default/objects/Order__c/fields/GRAND_TOTAL_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>GRAND_TOTAL_AMOUNT__c</fullName>
    <formula>TOTAL_AMOUNT__c  -  DISCOUNT_AMOUNT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>