force-app/main/default/objects/Order__c/fields/IS_INVENTORY_ORDER__c.field-meta.xml
<CustomField>
    <fullName>IS_INVENTORY_ORDER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Inventory Order</label>
    <type>Checkbox</type>
</CustomField>