force-app/main/default/objects/Order__c/fields/ISREDUCTIONORDER__c.field-meta.xml
<CustomField>
    <fullName>ISREDUCTIONORDER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reduction Order</label>
    <type>Checkbox</type>
</CustomField>