force-app/main/default/objects/Order__c/fields/Manufacturer_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Dealer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Manufacturer/Dealer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Manufacturer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Dealer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>