force-app/main/default/objects/Order__c/fields/Order_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Booked_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Order Booked Date</label>
    <type>Date</type>
</CustomField>