force-app/main/default/objects/Order__c/fields/ORDER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ORDER_TYPE__c</fullName>
    <label>Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>