force-app/main/default/objects/Order__c/fields/Partner_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Partner_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Dealer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>