force-app/main/default/objects/Order__c/fields/Pending_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Action_Date__c</fullName>
    <formula>EFFECTIVEDATE__c + 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Action Date</label>
    <type>Date</type>
</CustomField>