force-app/main/default/objects/Order__c/fields/Promotional_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotional Scheme</label>
    <referenceTo>Promotional_Scheme__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>