force-app/main/default/objects/Order__c/fields/SHIP_DATE__c.field-meta.xml
<CustomField>
    <fullName>SHIP_DATE__c</fullName>
    <label>SHIP_DATE</label>
    <type>Date</type>
</CustomField>