force-app/main/default/objects/Order__c/fields/SHIPMENT_DATE__c.field-meta.xml
<CustomField>
    <fullName>SHIPMENT_DATE__c</fullName>
    <label>Shipment Date</label>
    <type>Date</type>
</CustomField>