force-app/main/default/objects/Order__c/fields/SHIPPINGADDRESS__c.field-meta.xml
<CustomField>
    <fullName>SHIPPINGADDRESS__c</fullName>
    <label>Shipping Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>