force-app/main/default/objects/Order__c/fields/SHIPPINGCITY__c.field-meta.xml
<CustomField>
    <fullName>SHIPPINGCITY__c</fullName>
    <label>Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>