force-app/main/default/objects/Order__c/fields/SHIPPINGCOUNTRY__c.field-meta.xml
<CustomField>
    <fullName>SHIPPINGCOUNTRY__c</fullName>
    <label>Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>