force-app/main/default/objects/Order__c/fields/SHIPPINGLATITUDE__c.field-meta.xml
<CustomField>
    <fullName>SHIPPINGLATITUDE__c</fullName>
    <label>Shipping Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>