force-app/main/default/objects/Order__c/fields/SHIPPINGLONGITUDE__c.field-meta.xml
<CustomField>
    <fullName>SHIPPINGLONGITUDE__c</fullName>
    <label>Shipping Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>