force-app/main/default/objects/Order__c/fields/SHIPPINGPOSTALCODE__c.field-meta.xml
<CustomField>
    <fullName>SHIPPINGPOSTALCODE__c</fullName>
    <label>Shipping Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>