force-app/main/default/objects/Order__c/fields/SHIPPINGSTATE__c.field-meta.xml
<CustomField>
    <fullName>SHIPPINGSTATE__c</fullName>
    <label>Shipping State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>