force-app/main/default/objects/Order__c/fields/SHIPPINGSTREET__c.field-meta.xml
<CustomField>
    <fullName>SHIPPINGSTREET__c</fullName>
    <label>Shipping Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>