force-app/main/default/objects/Order__c/fields/TOTAL_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_AMOUNT__c</fullName>
    <label>Total Amount</label>
    <summarizedField>OrderItem__c.Total_Price__c</summarizedField>
    <summaryForeignKey>OrderItem__c.OrderId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>