force-app/main/default/objects/Order__c/recordTypes/Retailer.recordType-meta.xml
<RecordType>
    <fullName>Retailer</fullName>
    <active>true</active>
    <label>Retailer</label>
</RecordType>