force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ACTIVATEDDATE__c</columns>
    <columns>BILLINGADDRESS__c</columns>
    <columns>BILLINGCITY__c</columns>
    <columns>BILLINGCOUNTRY__c</columns>
    <columns>BILLINGPOSTALCODE__c</columns>
    <columns>BILLINGSTATE__c</columns>
    <columns>BILLINGSTREET__c</columns>
    <columns>DESCRIPTION__c</columns>
    <columns>EFFECTIVEDATE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>