force-app/main/default/objects/Order__c/listViews/Retailer_Orders.listView-meta.xml
<ListView>
    <fullName>Retailer_Orders</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>TOTAL_AMOUNT__c</columns>
    <columns>STATUS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Retailer</value>
    </filters>
    <label>Retailer Orders</label>
</ListView>